# Linux_Application_CXX

./: .clang-tidy  .gitattributes  BankAccount.md  CMakeLists.txt  README.md  Setup_Repo.bat
.github/workflows/: autosar-check.yml  autosar-ci.yml  autosar-clang-tidy.yml  cmake-multi-platform.yml
DocMd/: Inheritance_Vehicle.md  Linux_files_local.md  WSLPasswordLoginSetup.md  buildcmd.md
Doc_md/: BankAccount.md  GoogleTestintegrated.md
Include/: BankAccount.h  Class_Object.h  EncapsulationBankAccount.h
Scripts/: Setup_Repo.bat  Setup_repo.sh  build_run.sh  quick_build.sh  sh.md  wsl_setup.sh
Src/: Autosar_PR_Violations.cpp  BankAccount.cpp  Class_Object.cpp  EncapsulationBankAccount.cpp  main.cpp
Test/: BankAccount_Test.cpp  Class_Object_Test.cpp  test_math.cpp
include/: EncapsulationBankAccount.h  InheritanceVehicleCar.h  math_utils.h
src/: InheritanceVehicleCar.cpp  main.cpp  math_utils.cpp
tests/: EncapsulationBankAccount_Test.cpp  InheritanceVehicleCar_Test.cpp  main_test.cpp  test_math.cpp
